@@ -10,6 +10,7 @@ In Progress
 - Kill meterpreter, kill pivots, and credential dumps now use fresh 
   consoles to execute. This ensures they will execute even if the global
   console is stale (this sometimes happens.)
+- Added tab completion to Meterpreter window.
 
 21 Jan 11 Changes
 --------- 
